Telegram-bot/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: telegram-airdrop-bot
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - your-domain.com
      secretName: telegram-airdrop-bot-tls
  rules:
    - host: your-domain.com
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: telegram-airdrop-bot
                port:
                  number: 3002
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: telegram-airdrop-bot
                port:
                  number: 3001
          - path: /webhook
            pathType: Prefix
            backend:
              service:
                name: telegram-airdrop-bot
                port:
                  number: 8443
